# HM-clothing-public

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test.py  tune_k.py
data/: README.md  no_transaction_articles.txt  no_transaction_customers.txt  representative_articles.txt  representative_customers.txt
data/toy/: README.md
experiments/: README.md  knn_exp1.yml  knn_exp2.yml  knn_exp3.yml  knn_exp4.yml  knn_exp5.yml  knn_exp6.yml  knn_exp7.yml  knn_exp8.yml
hmcollab/: __init__.py  _version.py  articles.py  datasets.py  directories.py  directory_tree.py  models.py  scoring.py  similarity.py  splitter.py  test.py  three_part_dataset.py  transactions.py
hmcollab/tests/: fake_data.py  test_articles.py  test_datasets.py  test_directories.py  test_directory_tree.py  test_fake_data.py  test_hmdataset.py  test_models.py  (+8 more)
latex/: LightReading.tex  README.md  reading.bib
models/: README.md
notebooks/: Popular.ipynb  README.md  RandomDFsExperiment.ipynb  TargetClass.ipynb  Transactions_by_article_id.ipynb  Two_split_strategies.ipynb  articledummies_one_of_each.ipynb  articles_with_no_transactions.ipynb  augment_test_data_by_40.ipynb  augment_test_data_by_40_and_more.ipynb  demo.ipynb  display_data.py  find_missing_images.ipynb  kmeans_demo.ipynb  knn_demo.ipynb  model_kmeans_knn.ipynb  model_kmeans_knn_split_by_customer.ipynb  model_kmeans_knn_v4.ipynb  model_kmeans_knn_v8_filtered.ipynb  random_datasets.ipynb  split.ipynb  splitter.ipynb  three_part_split_with_strategies.ipynb  toy_from_tree.ipynb
scripts/: generate_data_subsets.py
(+11 files in other folders)
