[tool.poetry]
name = "hmcollab"
version = "0.3.0"
description = "Example marketing ML project"
authors = ["Reuben Brasher and Georgina Gonzalez"]
license = "MIT"
readme = "README.md"
packages = [{include = "hmcollab"}]
include = ["README.md", "hmcollab/tests/testdata/*"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24"
pandas = "^1.4"
scikit-learn = "^1.0"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
